Remove start recording endpoint
