# examples/room-manager/openapi.yaml
@@ -87,20 +87,6 @@ paths:
                     type: string
                 required:
                   - error
-  /api/rooms/{roomName}/start-recording:
-    post:
-      operationId: startRecording
-      tags:
-        - room
-      parameters:
-        - schema:
-            type: string
-          in: path
-          name: roomName
-          required: true
-      responses:
-        "200":
-          description: Default Response
 servers:
   - url: http://localhost:5004
     description: Development server
